--- a/app/themes/default/css/widget-juiportlets.css
+++ b/app/themes/default/css/widget-juiportlets.css
@@ -1,6 +1,6 @@
 /* Columns section */
 .juiportlet-columns{
-	float:left;
+	/*float:left;*/
 }
 
 .juiportlet-columns .juiportlet-column {
